version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/MeshWorkflowGroup.rst.txt
.. vale off



:class:`MeshWorkflowGroup`
==========================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.MeshWorkflowGroup(internalObject: Any)
              MeshWorkflowGroup(info: System.Runtime.Serialization.SerializationInfo, context: System.Runtime.Serialization.StreamingContext)

   Bases: :py:obj:`object`


   
   Defines a MeshWorkflowGroup.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: MeshWorkflowGroup

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddComment`
            - Creates a new child Comment.
          * - :py:attr:`~AddFigure`
            - Creates a new child Figure.
          * - :py:attr:`~AddImage`
            - Creates a new child Image.
          * - :py:attr:`~AddMeshWorkflow`
            - Adds a new workflow to the “MeshWorkflowGroup” object.
          * - :py:attr:`~ClearGeneratedData`
            - Resets all mesh workflows completely, i.e. also the geometry scoping transferred into each mesh workflow will be reset and all inactive geometry parts/bodies will become active again. Steps, controls, and outcomes will be reset to their initial state while any user-defined property settings will remain as-is.
          * - :py:attr:`~ClearOutputData`
            - Clears all MeshWorkflowGroup generated mesh and geometry output data (for all children workflow groups transferring meshes)
          * - :py:attr:`~ClearOutputMeshes`
            - Clears all MeshWorkflowGroup generated mesh output data (for all children workflow groups transferring meshes)
          * - :py:attr:`~ComputeMeshQualityMetrics`
            - ComputeMeshQualityMetrics method.
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateObjRef`
            - CreateObjRef method.
          * - :py:attr:`~CreateParameter`
            - Creates a new parameter for a Property.
          * - :py:attr:`~Delete`
            - Run the Delete action.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GenerateWorkflows`
            - Generates all mesh workflows, i.e. executes the “Input”, the “Steps”, and the “Output” as needed.
          * - :py:attr:`~GetAPIName`
            - Property name bound to dispId.
          * - :py:attr:`~GetAllProperties`
            - GetAllProperties method.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetEnumName`
            - Enum name bound to value
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetIconFile`
            - GetIconFile method.
          * - :py:attr:`~GetLifetimeService`
            - GetLifetimeService method.
          * - :py:attr:`~GetMeshQualityTabIndex`
            - GetMeshQualityTabIndex method.
          * - :py:attr:`~GetObjectData`
            - GetObjectData method.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GetPath`
            - GetPath method.
          * - :py:attr:`~GetPropertyName`
            - GetPropertyName method.
          * - :py:attr:`~GetPropertyValue`
            - GetPropertyValue method.
          * - :py:attr:`~GetSheetQuantityTypeString`
            - Get quantity type of sheet metric from mesh metric type
          * - :py:attr:`~GetSolidMeshMetrics`
            - GetSolidMeshMetrics method.
          * - :py:attr:`~GetSolidMeshQualityState`
            - Get the state of solid mesh quality worksheet tab
          * - :py:attr:`~GetSolidSurfaceMeshMetrics`
            - GetSolidSurfaceMeshMetrics method.
          * - :py:attr:`~GetSolidSurfaceMeshQualityErrorLimit`
            - Get Mesh Quality Error Limit
          * - :py:attr:`~GetSolidSurfaceMeshQualityErrorLimitIsDefault`
            - Get SolidSurface Mesh Quality Worksheet Error Limit is Default
          * - :py:attr:`~GetSolidSurfaceMeshQualityName`
            - Get Mesh Quality Name
          * - :py:attr:`~GetSolidSurfaceMeshQualityState`
            - Get the state of solid surface mesh quality worksheet tab
          * - :py:attr:`~GetSolidSurfaceMeshQualityWarningLimit`
            - Get Mesh Quality Warning Limit
          * - :py:attr:`~GetSolidSurfaceMeshQualityWarningLimitIsDefault`
            - Get SolidSurface Mesh Quality Worksheet Warning Limit is Default
          * - :py:attr:`~GetSolidSurfaceMeshQualityWorstMetricBackgroundColor`
            - Get Mesh Quality Worst Metric BackgroundColor
          * - :py:attr:`~GetSolidSurfaceMeshQualityWorstMetricTooltip`
            - Get Mesh Quality Worst Metric Tooltip
          * - :py:attr:`~GetSolidSurfaceMeshQualityWorstMetricValue`
            - Get Mesh Quality Worst Metric Value
          * - :py:attr:`~GetSolidSurfaceQuantityTypeString`
            - Get Quantity type from SolidSurface mesh metric type
          * - :py:attr:`~GetSurfaceMeshMetrics`
            - GetSurfaceMeshMetrics method.
          * - :py:attr:`~GetSurfaceMeshQualityErrorLimit`
            - Get User Mesh Quality Error Limit
          * - :py:attr:`~GetSurfaceMeshQualityErrorLimitIsDefault`
            - Get Mesh Quality Error Limit is default
          * - :py:attr:`~GetSurfaceMeshQualityName`
            - GetSurfaceMeshQualityName method.
          * - :py:attr:`~GetSurfaceMeshQualityState`
            - Get the state of surface mesh quality worksheet tab
          * - :py:attr:`~GetSurfaceMeshQualityWarningLimit`
            - Get User Mesh Quality Warning Limit
          * - :py:attr:`~GetSurfaceMeshQualityWarningLimitIsDefault`
            - Get Mesh Quality Warning Limit is default
          * - :py:attr:`~GetSurfaceMeshQualityWorstMetricBackgroundColor`
            - Get Mesh Quality Worst Metric Background Colour
          * - :py:attr:`~GetSurfaceMeshQualityWorstMetricTooltip`
            - Get Mesh Quality Worst Metric Tooltip
          * - :py:attr:`~GetSurfaceMeshQualityWorstMetricValue`
            - Get Mesh Quality Worst Metric Value
          * - :py:attr:`~GetVisibleProperties`
            - GetVisibleProperties method.
          * - :py:attr:`~GetVisiblePropertyNames`
            - GetVisiblePropertyNames method.
          * - :py:attr:`~GetVolumeMeshQualityErrorLimit`
            - Get Mesh Quality Error Limit
          * - :py:attr:`~GetVolumeMeshQualityErrorLimitIsDefault`
            - Get Volume Mesh Quality Worksheet Error Limit is Default
          * - :py:attr:`~GetVolumeMeshQualityName`
            - Get Mesh Quality Name
          * - :py:attr:`~GetVolumeMeshQualityWarningLimit`
            - Get Mesh Quality Warning Limit
          * - :py:attr:`~GetVolumeMeshQualityWarningLimitIsDefault`
            - Get Volume Mesh Quality Worksheet Warning Limit is Default
          * - :py:attr:`~GetVolumeMeshQualityWorstMetricBackgroundColor`
            - Get Mesh Quality Worst Metric BackgroundColor
          * - :py:attr:`~GetVolumeMeshQualityWorstMetricTooltip`
            - Get Mesh Quality Worst Metric Tooltip
          * - :py:attr:`~GetVolumeMeshQualityWorstMetricValue`
            - Get Mesh Quality Worst Metric Value
          * - :py:attr:`~GetVolumeQuantityTypeString`
            - Get Quantity type from solid mesh metric type
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~InitializeLifetimeService`
            - InitializeLifetimeService method.
          * - :py:attr:`~IsPropertyEditable`
            - IsPropertyEditable method.
          * - :py:attr:`~IsPropertyVisible`
            - IsPropertyVisible method.
          * - :py:attr:`~IsSolidSurfaceMeshQualityMetricComputed`
            - Is Solid Surface Mesh Quality Metric Computed
          * - :py:attr:`~IsSurfaceMeshQualityMetricComputed`
            - Is Surface Mesh Quality Metric Computed
          * - :py:attr:`~IsVolumeMeshQualityMetricComputed`
            - Is Solid Mesh Quality Metric Computed
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyById`
            - PropertyById method.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.
          * - :py:attr:`~RenameBasedOnType`
            - Renames applying the default name based on type.
          * - :py:attr:`~ResetMeshQualityMetrics`
            - ResetMeshQualityMetrics method.
          * - :py:attr:`~SetMeshQualityTabIndex`
            - SetMeshQualityTabIndex method.
          * - :py:attr:`~SetSolidSurfaceMeshQualityErrorLimit`
            - Set Mesh Quality Error Limit
          * - :py:attr:`~SetSolidSurfaceMeshQualityWarningLimit`
            - Set Mesh Quality Warning Limit
          * - :py:attr:`~SetSurfaceMeshQualityErrorLimit`
            - Set Mesh Quality Error Level
          * - :py:attr:`~SetSurfaceMeshQualityWarningLimit`
            - Set Mesh Quality Warning Limit
          * - :py:attr:`~SetVolumeMeshQualityErrorLimit`
            - Set Mesh Quality Error Limit
          * - :py:attr:`~SetVolumeMeshQualityWarningLimit`
            - Set Mesh Quality Warning Limit
          * - :py:attr:`~UpdateMeshWorkflowGroup`
            - Updates MeshWorkflowGroup object -> generates all need generated steps.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ActiveWorkflow`
            - Gets the ActiveWorkflow.
          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~Comments`
            - Gets the list of associated comments.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~Figures`
            - Gets the list of associated figures.
          * - :py:attr:`~GroupingFolder`
            - GroupingFolder property.
          * - :py:attr:`~IconName`
            - IconName property.
          * - :py:attr:`~Images`
            - Gets the list of associated images.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~MeshWorkflowObjects`
            - Gets the MeshWorkflowGroup.
          * - :py:attr:`~Name`
            - Name property.
          * - :py:attr:`~NumberOfShellMeshQualityMetrics`
            - NumberOfShellMeshQualityMetrics property.
          * - :py:attr:`~NumberOfSolidMeshQualityMetrics`
            - NumberOfSolidMeshQualityMetrics property.
          * - :py:attr:`~NumberOfSolidSurfaceMeshQualityMetrics`
            - NumberOfSolidSurfaceMeshQualityMetrics property.
          * - :py:attr:`~ObjectId`
            - ObjectId property.
          * - :py:attr:`~ObjectState`
            - ObjectState property.
          * - :py:attr:`~ObjectTags`
            - ObjectTags property.
          * - :py:attr:`~Parent`
            - Parent property.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~State`
            - State property.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.







Property detail
---------------
.. py:property:: ActiveWorkflow
   :type: Optional[Ansys.ACT.Automation.Mechanical.MeshWorkflow]


   
   Gets the ActiveWorkflow.
















   ..
       !! processed by numpydoc !!

.. py:property:: Children
   :type: Optional[List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]


   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: Comments
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Comment]]


   
   Gets the list of associated comments.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]


   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: Figures
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Figure]]


   
   Gets the list of associated figures.
















   ..
       !! processed by numpydoc !!

.. py:property:: GroupingFolder
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   GroupingFolder property.
















   ..
       !! processed by numpydoc !!

.. py:property:: IconName
   :type: Optional[str]


   
   IconName property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Images
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Image]]


   
   Gets the list of associated images.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSEngineeringModelAuto]


   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: MeshWorkflowObjects
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.MeshWorkflow]]


   
   Gets the MeshWorkflowGroup.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Name property.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfShellMeshQualityMetrics
   :type: Optional[int]


   
   NumberOfShellMeshQualityMetrics property.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfSolidMeshQualityMetrics
   :type: Optional[int]


   
   NumberOfSolidMeshQualityMetrics property.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfSolidSurfaceMeshQualityMetrics
   :type: Optional[int]


   
   NumberOfSolidSurfaceMeshQualityMetrics property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectId
   :type: Optional[int]


   
   ObjectId property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectState
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ObjectState]


   
   ObjectState property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectTags
   :type: Optional[Iterable[Ansys.Mechanical.DataModel.Interfaces.IObjectTag]]


   
   ObjectTags property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Parent
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   Parent property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: State
   :type: Optional[Ansys.Mechanical.DataModel.Enums.Legacy.State]


   
   State property.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> None

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddComment() -> Ansys.ACT.Automation.Mechanical.Comment

   
   Creates a new child Comment.

   ..
       !! processed by numpydoc !!

.. py:method:: AddFigure() -> Ansys.ACT.Automation.Mechanical.Figure

   
   Creates a new child Figure.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImage(filePath: str) -> Ansys.ACT.Automation.Mechanical.Image

.. code-block:: text

   Creates a new child Image.
   If a filePath is provided, the image will be loaded from that file,
   if not, the image will be a screen capture of the Geometry window.

..
       !! processed by numpydoc !!

.. py:method:: AddMeshWorkflow(type: Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.WorkflowType) -> Ansys.ACT.Automation.Mechanical.MeshWorkflow

   
   Adds a new workflow to the “MeshWorkflowGroup” object.

   ..
       !! processed by numpydoc !!

.. py:method:: ClearGeneratedData() -> None

   
   Resets all mesh workflows completely, i.e. also the geometry scoping transferred into each mesh workflow will be reset and all inactive geometry parts/bodies will become active again. Steps, controls, and outcomes will be reset to their initial state while any user-defined property settings will remain as-is.

   ..
       !! processed by numpydoc !!

.. py:method:: ClearOutputData() -> None

   
   Clears all MeshWorkflowGroup generated mesh and geometry output data (for all children workflow groups transferring meshes)

   ..
       !! processed by numpydoc !!

.. py:method:: ClearOutputMeshes() -> None

   
   Clears all MeshWorkflowGroup generated mesh output data (for all children workflow groups transferring meshes)

   ..
       !! processed by numpydoc !!

.. py:method:: ComputeMeshQualityMetrics(scope: str) -> None

   
   ComputeMeshQualityMetrics method.

   ..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> None

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateObjRef(requestedType: type) -> System.Runtime.Remoting.ObjRef

   
   CreateObjRef method.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Creates a new parameter for a Property.

   ..
       !! processed by numpydoc !!

.. py:method:: Delete() -> None

   
   Run the Delete action.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(other: Ansys.Mechanical.DataModel.Interfaces.IDataModelObject) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GenerateWorkflows() -> None

   
   Generates all mesh workflows, i.e. executes the “Input”, the “Steps”, and the “Output” as needed.

   ..
       !! processed by numpydoc !!

.. py:method:: GetAPIName(dispId: int) -> str

   
   Property name bound to dispId.

   ..
       !! processed by numpydoc !!

.. py:method:: GetAllProperties() -> List[Ansys.ACT.Automation.Mechanical.AutomationPropertyWrapper]

   
   GetAllProperties method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: bool, children: List[ChildrenType]) -> List[ChildrenType]
               GetChildren(category: Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory, recurses: bool, children: List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]) -> List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumName(enumType: type, value: int, dispId: int) -> str

   
   Enum name bound to value

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetIconFile() -> System.Byte

   
   GetIconFile method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetLifetimeService() -> Any

   
   GetLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetMeshQualityTabIndex() -> int

   
   GetMeshQualityTabIndex method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetObjectData(info: System.Runtime.Serialization.SerializationInfo, context: System.Runtime.Serialization.StreamingContext) -> None

   
   GetObjectData method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPath() -> str

   
   GetPath method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyName(dispId: int) -> str

   
   GetPropertyName method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyValue(name: str) -> Any

   
   GetPropertyValue method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetSheetQuantityTypeString(metric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> str

   
   Get quantity type of sheet metric from mesh metric type

   ..
       !! processed by numpydoc !!

.. py:method:: GetSolidMeshMetrics() -> Ansys.Common.Interop.AnsCoreObjects.IAnsIntColl

   
   GetSolidMeshMetrics method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetSolidMeshQualityState() -> Ansys.Common.Interop.DSObjectTypes.DSWorksheetTabState

   
   Get the state of solid mesh quality worksheet tab

   ..
       !! processed by numpydoc !!

.. py:method:: GetSolidSurfaceMeshMetrics() -> Ansys.Common.Interop.AnsCoreObjects.IAnsIntColl

   
   GetSolidSurfaceMeshMetrics method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetSolidSurfaceMeshQualityErrorLimit(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> Ansys.Core.Units.Quantity

   
   Get Mesh Quality Error Limit

   ..
       !! processed by numpydoc !!

.. py:method:: GetSolidSurfaceMeshQualityErrorLimitIsDefault(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> bool

   
   Get SolidSurface Mesh Quality Worksheet Error Limit is Default 

   ..
       !! processed by numpydoc !!

.. py:method:: GetSolidSurfaceMeshQualityName(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> str

   
   Get Mesh Quality Name

   ..
       !! processed by numpydoc !!

.. py:method:: GetSolidSurfaceMeshQualityState() -> Ansys.Common.Interop.DSObjectTypes.DSWorksheetTabState

   
   Get the state of solid surface mesh quality worksheet tab

   ..
       !! processed by numpydoc !!

.. py:method:: GetSolidSurfaceMeshQualityWarningLimit(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> Ansys.Core.Units.Quantity

   
   Get Mesh Quality Warning Limit

   ..
       !! processed by numpydoc !!

.. py:method:: GetSolidSurfaceMeshQualityWarningLimitIsDefault(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> bool

   
   Get SolidSurface Mesh Quality Worksheet Warning Limit is Default 

   ..
       !! processed by numpydoc !!

.. py:method:: GetSolidSurfaceMeshQualityWorstMetricBackgroundColor(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> str

   
   Get Mesh Quality Worst Metric BackgroundColor

   ..
       !! processed by numpydoc !!

.. py:method:: GetSolidSurfaceMeshQualityWorstMetricTooltip(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> str

   
   Get Mesh Quality Worst Metric Tooltip

   ..
       !! processed by numpydoc !!

.. py:method:: GetSolidSurfaceMeshQualityWorstMetricValue(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> Ansys.Core.Units.Quantity

   
   Get Mesh Quality Worst Metric Value

   ..
       !! processed by numpydoc !!

.. py:method:: GetSolidSurfaceQuantityTypeString(metric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> str

   
   Get Quantity type from SolidSurface mesh metric type

   ..
       !! processed by numpydoc !!

.. py:method:: GetSurfaceMeshMetrics() -> Ansys.Common.Interop.AnsCoreObjects.IAnsIntColl

   
   GetSurfaceMeshMetrics method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetSurfaceMeshQualityErrorLimit(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> Ansys.Core.Units.Quantity

   
   Get User Mesh Quality Error Limit

   ..
       !! processed by numpydoc !!

.. py:method:: GetSurfaceMeshQualityErrorLimitIsDefault(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> bool

   
   Get Mesh Quality Error Limit is default

   ..
       !! processed by numpydoc !!

.. py:method:: GetSurfaceMeshQualityName(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> str

   
   GetSurfaceMeshQualityName method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetSurfaceMeshQualityState() -> Ansys.Common.Interop.DSObjectTypes.DSWorksheetTabState

   
   Get the state of surface mesh quality worksheet tab

   ..
       !! processed by numpydoc !!

.. py:method:: GetSurfaceMeshQualityWarningLimit(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> Ansys.Core.Units.Quantity

   
   Get User Mesh Quality Warning Limit

   ..
       !! processed by numpydoc !!

.. py:method:: GetSurfaceMeshQualityWarningLimitIsDefault(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> bool

   
   Get Mesh Quality Warning Limit is default

   ..
       !! processed by numpydoc !!

.. py:method:: GetSurfaceMeshQualityWorstMetricBackgroundColor(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> str

   
   Get Mesh Quality Worst Metric Background Colour

   ..
       !! processed by numpydoc !!

.. py:method:: GetSurfaceMeshQualityWorstMetricTooltip(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> str

   
   Get Mesh Quality Worst Metric Tooltip

   ..
       !! processed by numpydoc !!

.. py:method:: GetSurfaceMeshQualityWorstMetricValue(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> Ansys.Core.Units.Quantity

   
   Get Mesh Quality Worst Metric Value

   ..
       !! processed by numpydoc !!

.. py:method:: GetVisibleProperties() -> List[System.Reflection.PropertyInfo]

   
   GetVisibleProperties method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetVisiblePropertyNames() -> List[str]

   
   GetVisiblePropertyNames method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetVolumeMeshQualityErrorLimit(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> Ansys.Core.Units.Quantity

   
   Get Mesh Quality Error Limit

   ..
       !! processed by numpydoc !!

.. py:method:: GetVolumeMeshQualityErrorLimitIsDefault(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> bool

   
   Get Volume Mesh Quality Worksheet Error Limit is Default 

   ..
       !! processed by numpydoc !!

.. py:method:: GetVolumeMeshQualityName(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> str

   
   Get Mesh Quality Name

   ..
       !! processed by numpydoc !!

.. py:method:: GetVolumeMeshQualityWarningLimit(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> Ansys.Core.Units.Quantity

   
   Get Mesh Quality Warning Limit

   ..
       !! processed by numpydoc !!

.. py:method:: GetVolumeMeshQualityWarningLimitIsDefault(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> bool

   
   Get Volume Mesh Quality Worksheet Warning Limit is Default 

   ..
       !! processed by numpydoc !!

.. py:method:: GetVolumeMeshQualityWorstMetricBackgroundColor(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> str

   
   Get Mesh Quality Worst Metric BackgroundColor

   ..
       !! processed by numpydoc !!

.. py:method:: GetVolumeMeshQualityWorstMetricTooltip(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> str

   
   Get Mesh Quality Worst Metric Tooltip

   ..
       !! processed by numpydoc !!

.. py:method:: GetVolumeMeshQualityWorstMetricValue(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> Ansys.Core.Units.Quantity

   
   Get Mesh Quality Worst Metric Value

   ..
       !! processed by numpydoc !!

.. py:method:: GetVolumeQuantityTypeString(metric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> str

   
   Get Quantity type from solid mesh metric type

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> None

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: InitializeLifetimeService() -> Any

   
   InitializeLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsPropertyEditable(dispId: int) -> bool
               IsPropertyEditable(propName: str) -> bool

   
   IsPropertyEditable method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsPropertyVisible(dispId: int) -> bool
               IsPropertyVisible(propName: str) -> bool

   
   IsPropertyVisible method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsSolidSurfaceMeshQualityMetricComputed(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> bool

   
   Is Solid Surface Mesh Quality Metric Computed

   ..
       !! processed by numpydoc !!

.. py:method:: IsSurfaceMeshQualityMetricComputed(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> bool

   
   Is Surface Mesh Quality Metric Computed

   ..
       !! processed by numpydoc !!

.. py:method:: IsVolumeMeshQualityMetricComputed(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType) -> bool

   
   Is Solid Mesh Quality Metric Computed

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyById(dispId: int) -> Ansys.ACT.Automation.Mechanical.Property

   
   PropertyById method.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: str) -> None

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: RenameBasedOnType() -> None

   
   Renames applying the default name based on type.

   ..
       !! processed by numpydoc !!

.. py:method:: ResetMeshQualityMetrics() -> None

   
   ResetMeshQualityMetrics method.

   ..
       !! processed by numpydoc !!

.. py:method:: SetMeshQualityTabIndex(tabIndex: int) -> None

   
   SetMeshQualityTabIndex method.

   ..
       !! processed by numpydoc !!

.. py:method:: SetSolidSurfaceMeshQualityErrorLimit(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType, errorLevel: float) -> None
               SetSolidSurfaceMeshQualityErrorLimit(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType, errorLevel: Ansys.Core.Units.Quantity) -> None

   
   Set Mesh Quality Error Limit

   ..
       !! processed by numpydoc !!

.. py:method:: SetSolidSurfaceMeshQualityWarningLimit(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType, warningLevel: float) -> None
               SetSolidSurfaceMeshQualityWarningLimit(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType, warningLevel: Ansys.Core.Units.Quantity) -> None

   
   Set Mesh Quality Warning Limit

   ..
       !! processed by numpydoc !!

.. py:method:: SetSurfaceMeshQualityErrorLimit(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType, errorLevel: float) -> None
               SetSurfaceMeshQualityErrorLimit(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType, errorLevel: Ansys.Core.Units.Quantity) -> None

   
   Set Mesh Quality Error Level

   ..
       !! processed by numpydoc !!

.. py:method:: SetSurfaceMeshQualityWarningLimit(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType, warningLevel: float) -> None
               SetSurfaceMeshQualityWarningLimit(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType, warningLevel: Ansys.Core.Units.Quantity) -> None

   
   Set Mesh Quality Warning Limit

   ..
       !! processed by numpydoc !!

.. py:method:: SetVolumeMeshQualityErrorLimit(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType, errorLevel: float) -> None
               SetVolumeMeshQualityErrorLimit(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType, errorLevel: Ansys.Core.Units.Quantity) -> None

   
   Set Mesh Quality Error Limit

   ..
       !! processed by numpydoc !!

.. py:method:: SetVolumeMeshQualityWarningLimit(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType, warningLevel: float) -> None
               SetVolumeMeshQualityWarningLimit(meshMetric: Ansys.Mechanical.DataModel.Enums.MeshMetricType, warningLevel: Ansys.Core.Units.Quantity) -> None

   
   Set Mesh Quality Warning Limit

   ..
       !! processed by numpydoc !!

.. py:method:: UpdateMeshWorkflowGroup() -> None

   
   Updates MeshWorkflowGroup object -> generates all need generated steps.

   ..
       !! processed by numpydoc !!



.. vale on